# traits

./: CMakeLists.txt  readme.md
include/traits/type/: integral.h  list.h  nothing.h  ops.h
test/: CMakeLists.txt  ops.cpp
